# Portfolio-HomeAutomationSystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  简历项目描述.md
apps/: CMakeLists.txt  app_resources.qrc  main.cpp
config/: setting.json
docs/: CPP_EXPORT_USAGE.md  PURE_CPP_RUNTIME.md  UI_RENOVATION_PLAN.md
modules/gesture/: CMakeLists.txt  gesture_gate.cpp  gesture_gate.h  gesture_model.cpp  gesture_model.h  gesture_pipeline.cpp  gesture_pipeline.h  gesture_types.h  mediapipe_stream_client.cpp  mediapipe_stream_client.h
modules/ui/: CMakeLists.txt  mainwidget.cpp  mainwidget.h  mainwidget_runtime.cpp  mainwidget_support.cpp  mainwidget_support.h
modules/ui/widgets/: camera_system.cpp  camera_system.h  frame_sequence_widget.cpp  frame_sequence_widget.h  lighting_system.cpp  lighting_system.h  model_opengl_widget.cpp  model_opengl_widget.h
resources/config/: setting.json
resources/models/: cpp_model.json
scripts/: build_mediapipe_bridge.ps1  check_msvc_env.ps1  convert_media_to_grayscale.ps1  make_animation_frames_transparent.ps1
tools/: validate_realtime.py
